fix: update callout colors to fix contrast issues on light mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -85,6 +85,10 @@
   article {
     @apply prose-headings:scroll-mt-20 prose-headings:break-words first:prose-headings:mt-0 prose-p:break-words prose-a:!break-words prose-a:!decoration-muted-foreground prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-foreground prose-pre:!px-0 prose-img:mx-auto;
 
+    img {
+      border-radius: 0.75rem;
+    }
+
     .katex-display {
       @apply overflow-x-auto overflow-y-hidden py-4;
     }
